Changelog
=========

1.1 - unreleased
----------------

- No longer use the deprecated `zope.testing.doctest`.
  [hannosch]

- Distribution metadata cleanup.
  [hannosch]

- Use built-in `xml.etree` in favor of `elementree` in Python 2.5+ and added
  missing dependency on `zc.recipe.egg`.
  [multani]

1.0b3 - 2010-06-07
------------------

* Rename the ``-x`` option ``--xml``. This is necessary by zope.testing now
  uses the ``-x`` option for something else. :-(

1.0b2 - 2009-11-08
------------------

* Maintain compatibility with zope.testing 3.7.

1.0b1 - 2009-11-07
------------------

* Initial release